--- a/dev/index.html
+++ b/dev/index.html
@@ -2,7 +2,7 @@
   <head>
   	<meta charset="UTF-8">
   	<title>ShirleySite</title>
-  	<link rel="stylesheet" href="css/style.css">
+  	<link rel="stylesheet" href="css/style1.css">
     <script>
             window.onload = fadeIn;
             function fadeIn() {
